changed github pages yml

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -28,18 +28,18 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    defaults:
+       run:
+         working-directory: ./client/
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Defining directory
-        run: |
-          cd client
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "20"
           cache: 'npm'
-          cache-dependency-path: client/package-lock.json
+          cache-dependency-path: './client/package-lock.json'
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
