--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
+    "next-page-transitions": "^1.0.0-beta.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
