--- a/server-java/src/main/resources/application.yml
+++ b/server-java/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 server:
-  port: 8080
+  port: 5432
 
 
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/
-    username:
-    password: vfrcbv
+    url: jdbc:postgresql://localhost:5432/renovation_db
+    username: ybogdanq
+    password:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
