--- a/client/package.json
+++ b/client/package.json
@@ -25,11 +25,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-star-ratings": "^2.3.0",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@svgr/cli": "^6.2.1"
+    "@svgr/cli": "^6.2.1",
+    "@types/react-star-ratings": "^2.3.0"
   }
 }
