--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-intersection-observer": "^9.4.3",
+		"react-notifications": "^1.7.4",
 		"react-star-ratings": "^2.3.0",
 		"swiper": "^9.3.2",
 		"tailwindcss": "3.3.2",
