--- a/server-js/package.json
+++ b/server-js/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.13.0",
     "@types/nodemailer": "^6.4.8",
+    "bson": "^5.4.0",
     "nodemailer": "^6.9.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
